get sendGrid token create signup controller create signup route create signup validation middleware write test for signup controller and middleware create function to generate one time token create a class for sending emails with sendGrid
[delivers #160452475]
